--- a/src/main.css
+++ b/src/main.css
@@ -10,7 +10,7 @@
 
 /* Carousel base class */
 .carousel {
-  height: 240px;
+  min-height: 240px;
   margin-bottom: 30px;
 }
 /* Since positioning the image, we need to help out the caption */
